--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,11 +1,55 @@
-html, body, canvas {
+html, body {
     position: fixed;
     top: 0;
     left: 0;
-    background: black;
+    background: white;
     width: 100%;
     height: 100%;
     overflow: hidden;
     margin: 0;
     padding: 0;
+}
+
+canvas {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: 0;
+    padding: 0;
+    background: black;
+    height: 512px;
+    width: 512px;
+}
+
+#origin {
+    transform: translate(-160%,-50%);
+    -webkit-transform: translate(-160%,-50%);
+    -moz-transform: translate(-160%,-50%);
+    -ms-transform: translate(-160%,-50%);
+}
+
+#scrambled {
+    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+#final {
+    transform: translate(60%,-50%);
+    -webkit-transform: translate(60%,-50%);
+    -moz-transform: translate(60%,-50%);
+    -ms-transform: translate(60%,-50%);
+}
+
+a {
+    display: inline-block;
+    position: absolute;
+    top: calc(50% + 300px);
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    color: black;
 }
