--- a/src/style/main.css
+++ b/src/style/main.css
@@ -2,7 +2,7 @@ html, body {
     position: fixed;
     top: 0;
     left: 0;
-    background: white;
+    background: black;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -51,5 +51,5 @@ a {
     -webkit-transform: translate(-50%,-50%);
     -moz-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
-    color: black;
+    color: white;
 }
