--- a/src/style/main.css
+++ b/src/style/main.css
@@ -53,4 +53,5 @@ a {
     -moz-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     color: white;
+    font-size: 13px;
 }
